# sigseg-faststream

./: .gitignore  README.md  pyproject.toml
csigseg/: sigseg.c  sigseg.py
sigseg_faststream/: __init__.py  consumer.py  producer.py
