[tool.poetry]
name = "sigseg-faststream"
version = "0.1.0"
description = ""
authors = ["Luc Sorel-Giffo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
faststream = {extras = ["rabbit"], version = "^0.3.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
